--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -5,7 +5,7 @@
     android:id="@+id/favtext"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.favorites.FavoritesFragment">
+    tools:context=".ui.favorites.FavoritesFragment">
 
     <TextView
         android:id="@+id/textView"
