--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NewsFragment"
+    tools:context=".view.NewsFragment"
     tools:viewBindingIgnore="true">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
